tests/baselines/reference/nonGenericClassExtendingGenericClassWithAny.errors.txt
nonGenericClassExtendingGenericClassWithAny.ts(2,5): error TS2564: Property 't' has no initializer and is not definitely assigned in the constructor.


==== nonGenericClassExtendingGenericClassWithAny.ts (1 errors) ====
    class Foo<T> {
        t: T;
        ~
!!! error TS2564: Property 't' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Bar extends Foo<any> { } // Valid